<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".forgot_passwd">

    <include layout="@layout/app_bar_layout" android:id="@+id/forgo_toolbar"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/forg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534">

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="170dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="11dp"
                android:lineSpacingExtra="18sp"
                android:paddingTop="10sp"
                android:text="@string/username_or_email"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editText3"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp">

                <android.support.design.widget.TextInputEditText

                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ems="10"
                    android:hint="@string/email_id"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editText3"
                android:layout_marginTop="100dp"
                android:text="@string/need_more_help"
                android:textColor="@color/cyan"
                android:textSize="12sp" />


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/button3"
                android:layout_width="290dp"
                android:layout_height="25dp"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@color/cyan"
                android:text="@string/get_new_password"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textVie2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_again"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


</android.support.constraint.ConstraintLayout>