<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ExpandActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/expand_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/xxx" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/expand_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:padding="6dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="6dp"
                            android:src="@drawable/money" />

                        <TextView
                            android:id="@+id/expand_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:padding="6dp"
                            android:text="@string/fixed_price"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

                <ImageView
                    android:id="@+id/expand_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/image"
                    android:padding="6dp"
                    app:srcCompat="@drawable/ic_star_border_black_24dp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="6dp"
                            android:src="@drawable/ic_place_black_24dp" />

                        <TextView
                            android:id="@+id/expand_place"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="9"
                            android:padding="6dp"
                            android:text="@string/location_and_contact"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/expand_category1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:padding="6dp"
                            android:text="@string/category1"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/expand_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:text="@string/category"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:padding="6dp"
                        android:text="@string/description1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/expand_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="6dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/expand_call"
                        android:layout_width="52dp"
                        android:layout_height="48dp"
                        android:background="@drawable/round_preview"
                        android:contentDescription="@string/image"
                        android:padding="10dp"
                        android:src="@drawable/call"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/expand_call_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call_order"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageButton
                        android:id="@+id/deleteBtn"
                        android:layout_width="52dp"
                        android:layout_height="48dp"
                        android:background="@drawable/round"
                        android:contentDescription="@string/image"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        app:srcCompat="@drawable/delete" />

                    <TextView
                        android:id="@+id/deleteText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Delete Post"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/expand_chat"
                        android:layout_width="52dp"
                        android:layout_height="48dp"
                        android:background="@drawable/round_text"
                        android:contentDescription="@string/image"
                        android:padding="10dp"
                        android:src="@drawable/message"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/expand_chat_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/chat"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>