<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/rlog_toolbar" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="304dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/edit"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="272dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="368dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_email" />
    </android.support.design.widget.TextInputLayout>


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/log_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/green"
        android:text="@string/sign_in"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="8dp"
        app:spinning_bar_width="8dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_pass" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/log_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/colorWhite"
        android:checked="false"
        android:text="remember me"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_pass" />

    <TextView
        android:id="@+id/forgo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:padding="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/hyper"
        android:text="@string/forgotten_your_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_btn" />



    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_btn"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="No Account?"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/logReg"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Register."
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlog_toolbar"
        app:srcCompat="@drawable/ic_bubble_chart_black_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        android:text="Welcome to K2P"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />


</android.support.constraint.ConstraintLayout>
